welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:14: error: Unmatched closing brace '}' ignored here
    }
    ^BDRBuggle:20: error: Unmatched closing brace '}' ignored here
    }
    ^BDRBuggle:24: error: Unmatched closing brace '}' ignored here
    }
    ^BDRBuggle:29: error: Unmatched closing brace '}' ignored here
    }
    ^BDRBuggle:35: error: Unmatched closing brace '}' ignored here
    }
    ^BDRBuggle:39: error: Unmatched closing brace '}' ignored here
    }
    ^BDRBuggle:46: error: ';' expected but 'else' found.
  else if(message == 'X') {
  ^BDRBuggle:52: error: ';' expected but 'else' found.
  else {
  ^BDRBuggle:57: error: Unmatched closing brace '}' ignored here
	}
        ^BDRBuggle:58: error: eof expected but '}' found.
}
^